src/Styles/pages/_hero.scss
.hero {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    place-items: center;
    padding: 145px 127px 85px;

    @include respondTo(tablet) {
        grid-template-columns: repeat(1, 1fr);
        padding: 29px 65px;
    }
}

.hero__btn button {
    padding: 17px 41px;
    border-radius: 100px;
    &:last-of-type {
        margin-left: 18px;

        @include respondTo(tablet) {
            margin-left: 0;
            margin-top: 20px;
        }
    }
}

.hero__btn {
    margin-top: 50px;

    @include respondTo(tablet) {
        margin-top: 25px;
        display: grid;
        place-items: center;
    }
}

.hero__content h2 {
    display: flex;
    flex-direction: column;
    font-weight: 600;
    font-size: 58px;
    line-height: 70px;
    letter-spacing: -1px;
    margin-bottom: 31px;

    @include respondTo(tablet) {
        font-size: 32px;
        line-height: 37px;
        text-align: center;
    }
}

.hero__content p {
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 28px;

    @include respondTo(tablet) {
        opacity: 0.7;
        text-align: center;
    }
}

.hero__image {
    @include respondTo(tablet) {
        margin-top: 60px;
    }
}

